<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="con"
            android:gravity="end|center_vertical"
            android:paddingEnd="@dimen/activity_medium_padding"
            android:text="@string/today"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingEnd="@dimen/activity_medium_padding"
            android:text="NN.N"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="/"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/activity_medium_padding"
            android:text="NN.N"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/activity_medium_padding"
            android:text="@string/past_day"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/flat_button_height"
            android:layout_margin="@dimen/activity_medium_padding"
            android:background="@drawable/flat_button"
            android:text="@string/day"
            android:textColor="@drawable/flat_button_text"/>

        <Button
            android:id="@+id/week_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/flat_button_height"
            android:layout_margin="@dimen/activity_medium_padding"
            android:background="@drawable/flat_button"
            android:text="@string/week"
            android:textColor="@drawable/flat_button_text"/>

        <Button
            android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/flat_button_height"
            android:layout_margin="@dimen/activity_medium_padding"
            android:background="@drawable/flat_button"
            android:text="@string/month"
            android:textColor="@drawable/flat_button_text"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primary"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/photo_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_recycler"
        android:layout_marginBottom="-16dp"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/item_photo"/>

</LinearLayout>